# random_arm_sve_tests

./: .gitignore  Benchmark.cpp  Benchmark.h  CMakeLists.txt  Makefile  expa.cpp  test.c  test_exp.cpp  test_log.cpp  test_log_old.cpp  test_tanh.cpp
